--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -13,11 +13,14 @@
   <title>Sistema de Gestion Administrativa para Veterinaria</title>
 
   <!-- Custom fonts for this template-->
-  <link href="{%static 'base/vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
+  <link href="{% static 'base/vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
   <!-- Custom styles for this template-->
-  <link href="{%static 'base/css/sb-admin-2.min.css' %}" rel="stylesheet">
+  <link href="{% static 'base/css/sb-admin-2.min.css' %}" rel="stylesheet">
+
+  <!-- Custom styles for this page -->
+  <link href="{% static 'base/vendor/datatables/dataTables.bootstrap4.min.css' %}"" rel="stylesheet">
 
 </head>
 
@@ -30,11 +33,11 @@
     <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
       <!-- Sidebar - Brand -->
-      <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+      <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{% url 'bases:home' %}">
         <div class="sidebar-brand-icon rotate-n-15">
           <i class="fas fa-laugh-wink"></i>
         </div>
-        <div class="sidebar-brand-text mx-3">SB Admin <sup>2</sup></div>
+        <div class="sidebar-brand-text mx-3">Veterinaria <sup>Mundo Animal</sup></div>
       </a>
 
       <!-- Divider -->
@@ -42,7 +45,7 @@
 
       <!-- Nav Item - Dashboard -->
       <li class="nav-item">
-        <a class="nav-link" href="index.html">
+        <a class="nav-link" href="{% url 'bases:home' %}">
           <i class="fas fa-fw fa-tachometer-alt"></i>
           <span>Dashboard</span></a>
       </li>
@@ -52,20 +55,21 @@
 
       <!-- Heading -->
       <div class="sidebar-heading">
-        Interface
+        Opciones de Menu
       </div>
 
       <!-- Nav Item - Pages Collapse Menu -->
       <li class="nav-item">
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
           <i class="fas fa-fw fa-cog"></i>
-          <span>Components</span>
+          <span>Catalogos</span>
         </a>
         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
-            <h6 class="collapse-header">Custom Components:</h6>
-            <a class="collapse-item" href="buttons.html">Buttons</a>
-            <a class="collapse-item" href="cards.html">Cards</a>
+            <h6 class="collapse-header">Catalogos de Inventario:</h6>
+            <a class="collapse-item" href="{% url 'inv:categoria_list' %}">Categorias</a>
+            <a class="collapse-item" href="{% url 'inv:subcategoria_list' %}">Sub-Categorias</a>
+            <a class="collapse-item" href="{% url 'inv:marca_list' %}">Marca</a>
           </div>
         </div>
       </li>
@@ -398,6 +402,11 @@
 
   <!-- Custom scripts for all pages-->
   <script src="{% static 'base/js/sb-admin-2.min.js' %}"></script>
+
+   <!-- Page level plugins -->
+   <script src="{% static 'base/vendor/datatables/jquery.dataTables.min.js' %}"></script>
+   <script src="{% static 'base/vendor/datatables/dataTables.bootstrap4.min.js' %}"></script>
+
   {% block js_page %} {% endblock js_page %}
 </body>
 
