--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -28,6 +28,8 @@
   <!-- XDSoft DateTimePicker -->  
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.min.css" integrity="sha256-DOS9W6NR+NFe1fUhEE0PGKY/fubbUCnOfTje2JMDw3Y=" crossorigin="anonymous" />  
 
+  <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.18.3/dist/bootstrap-table.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
 
 </head>
 
@@ -92,10 +94,18 @@
             {% endif %}
 
 
-            <h6 class="collapse-header">Catalogos de Compras:</h6>
+            <h6 class="collapse-header">Catálogos de Compras:</h6>
+            
             {% if perms.cmp.view_proveedor %}
-            <a class="collapse-item" href="{% url 'cmp:proveedor_list' %}">Proveedor</a>
+            <a class="collapse-item" href="{% url 'cmp:proveedor_list' %}">Proveedores</a>
             {% endif %}
+
+            <h6 class="collapse-header">Catálogos de Facturación:</h6>
+            
+            {% if perms.fac.view_cliente %}
+            <a class="collapse-item" href="{% url 'fac:cliente_list' %}">Clientes</a>
+            {% endif %}
+            
           </div>
         </div>
       </li>
@@ -107,12 +117,15 @@
         <div id="collapseCompras" class="collapse {% if cmp_url in request.path  %} show {% endif %}" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Entradas</h6>
-            <a class="collapse-item" href="{% url 'cmp:compras_list' %}">Compras</a>
+            <a class="collapse-item {% if cmp_url in request.path  %} active {% endif %}" href="{% url 'cmp:compras_list' %}">Compras</a>
 
+            <h6 class="collapse-header">Salidas</h6>
+            <a class="collapse-item" href="{% url 'fac:factura_list' %}">Facturas</a>
 
           </div>
         </div>
       </li>
+      
 
       <!-- Nav Item - Utilities Collapse Menu -->
       <!-- <li class="nav-item">
@@ -450,7 +463,9 @@
 
    <script src="{% static 'base/vendor/jquery_confirmed/jquery-confirm.min.js' %}"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.full.min.js" integrity="sha256-FEqEelWI3WouFOo2VWP/uJfs1y8KJ++FLh2Lbqc8SJk=" crossorigin="anonymous"></script>  
-
+   
+   <script src="https://unpkg.com/bootstrap-table@1.18.3/dist/bootstrap-table.min.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 
    <script>
     $(document).ready(function () {
